tests/invalid/SetUnion_Invalid_1.whiley
method main() -> {int}:
    real y = 1.0234234
    {int} xs = {1, 2, 3, 4}
    return xs + y
